Covered link fix

--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -512,3 +512,7 @@
         max-height: 28px;
     }
 }
+
+.memo-contact-top {
+    z-index: 10;
+}
